--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script src="https://webapi.amap.com/maps?v=1.4.15&key=9e6fe57f07f8cfb1f7a35b2a318cadf6"></script>
 </head>
 <body>
-<div id="mapContainer" style="width: 100%; height: 100%;">
+<div id="mapContainer" style="width: 100%; height: 700px;">
 </div>
 </body>
 </html>
