--- a/index.html
+++ b/index.html
@@ -1,41 +1,78 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN" style="height: 100%">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-  <script src="https://webapi.amap.com/maps?v=1.4.15&key=9e6fe57f07f8cfb1f7a35b2a318cadf6"></script>
+  <meta charset="utf-8">
 </head>
-<body>
-<div id="mapContainer" style="width: 100%; height: 700px;">
-</div>
+<body style="height: 100%; margin: 0">
+  <div id="container" style="height: 100%"></div>
+
+  
+  <script type="text/javascript" src="https://fastly.jsdelivr.net/npm/echarts@5.4.2/dist/echarts.min.js"></script>
+
+  <script type="text/javascript">
+    var dom = document.getElementById('container');
+    var myChart = echarts.init(dom, null, {
+      renderer: 'canvas',
+      useDirtyRect: false
+    });
+    var app = {};
+    
+    var option;
+
+    option = {
+  graphic: {
+    elements: [
+      {
+        type: 'text',
+        left: 'center',
+        top: 'center',
+        style: {
+          text: 'Morii',
+          fontSize: 80,
+          fontWeight: 'bold',
+          lineDash: [0, 200],
+          lineDashOffset: 0,
+          fill: 'transparent',
+          stroke: '#000',
+          lineWidth: 1
+        },
+        keyframeAnimation: {
+          duration: 3000,
+          loop: true,
+          keyframes: [
+            {
+              percent: 0.7,
+              style: {
+                fill: 'transparent',
+                lineDashOffset: 200,
+                lineDash: [200, 0]
+              }
+            },
+            {
+              // Stop for a while.
+              percent: 0.8,
+              style: {
+                fill: 'transparent'
+              }
+            },
+            {
+              percent: 1,
+              style: {
+                fill: 'black'
+              }
+            }
+          ]
+        }
+      }
+    ]
+  }
+};
+
+    if (option && typeof option === 'object') {
+      myChart.setOption(option);
+    }
+
+    window.addEventListener('resize', myChart.resize);
+  </script>
 </body>
 </html>
-<script>
-  //初始化地图
-  // 初始化地图和标记
-  var map = new AMap.Map('mapContainer', {
-    zoom: 13,
-    center: [116.397428, 39.90923]
-  });
-  var marker = null; // 标记对象
-
-  // 添加点击事件监听
-  map.on('click', function (e) {
-    var lnglat = e.lnglat;
-    //输出经纬度
-    console.log('经纬度：' + lnglat.getLng() + ',' + lnglat.getLat());
-
-    // 检查是否已经存在标记
-    if (marker) {
-      // 如果已存在标记，则移除标记
-      marker.setMap(null);
-      marker = null;
-    } else {
-      // 如果不存在标记，则添加标记
-      marker = new AMap.Marker({
-        position: lnglat,
-        map: map
-      });
-    }
-  });
-</script>
