--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 </head>
-<body style="height: 100%; margin: 0">
+<body style="margin: 0">
   <div id="container" style="height: 800px;width:1200px"></div>
 
   
