--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         left: 'center',
         top: 'center',
         style: {
-          text: 'Morii',
+          text: 'MoriiYYDS',
           fontSize: 80,
           fontWeight: 'bold',
           lineDash: [0, 200],
